Add test error on categorical vs. continuous label space

--- a/presentation.tex
+++ b/presentation.tex
@@ -38,6 +38,8 @@ hyperref={
 
 \usepackage{makecell}
 
+\usepackage{subcaption}
+
 \DeclareCiteCommand{\citeauthor}
 {\boolfalse{citetracker}%
 	\boolfalse{pagetracker}%
@@ -83,6 +85,21 @@ ICML 2021
 	
 \begin{frame}
 \titlepage
+\end{frame}
+
+\begin{frame}{Test Error on Categorical vs. Continuous Label Space}
+	\begin{figure}[h]
+	\begin{subfigure}{0.48\textwidth}
+		\includegraphics[width=\linewidth]{images/err_motivate_1_left.pdf}
+		\caption{CIFAR-100 (subsampled)}
+	\end{subfigure}\hspace{1em}%
+	\begin{subfigure}{0.48\textwidth}
+		\includegraphics[width=\linewidth]{images/err_motivate_1_right.pdf}
+		\caption{IMDB-WIKI (subsampled)}
+	\end{subfigure}
+	%\caption{}
+	\end{figure}
+	\credit{Image}{yang2021delving}
 \end{frame}
 
 %\section{References}
