--- a/presentation.tex
+++ b/presentation.tex
@@ -87,6 +87,14 @@ ICML 2021
 \titlepage
 \end{frame}
 
+\begin{frame}{Deep Imbalance Regression - Overview}
+	\begin{figure}[h]
+		\includegraphics[width=\linewidth]{images/teaser.pdf}
+		%\caption{}
+	\end{figure}
+	\credit{Image}{yang2021delving}
+\end{frame}
+
 \begin{frame}{Test Error on Categorical vs. Continuous Label Space}
 	\begin{figure}[h]
 	\begin{subfigure}{0.48\textwidth}
