Add label distribution smoothing

--- a/presentation.tex
+++ b/presentation.tex
@@ -110,6 +110,14 @@ ICML 2021
 	\credit{Image}{yang2021delving}
 \end{frame}
 
+\begin{frame}{Label Distribution Smoothing}
+	\begin{figure}[h]
+		\includegraphics[width=\linewidth]{images/err_motivate_sep.pdf}
+		%\caption{}
+	\end{figure}
+	\credit{Image}{yang2021delving}
+\end{frame}
+
 %\section{References}
 %\begin{frame}[allowframebreaks]
 %\frametitle{References}
