Add feature distribution smoothing

--- a/presentation.tex
+++ b/presentation.tex
@@ -118,6 +118,14 @@ ICML 2021
 	\credit{Image}{yang2021delving}
 \end{frame}
 
+\begin{frame}{Feature Distribution Smoothing}
+	\begin{figure}[h]
+		\includegraphics[width=\linewidth]{images/teaser_fds.pdf}
+		%\caption{}
+	\end{figure}
+	\credit{Image}{yang2021delving}
+\end{frame}
+
 %\section{References}
 %\begin{frame}[allowframebreaks]
 %\frametitle{References}
