--- a/presentation.tex
+++ b/presentation.tex
@@ -126,10 +126,10 @@ ICML 2021
 	\credit{Image}{yang2021delving}
 \end{frame}
 
-%\section{References}
-%\begin{frame}[allowframebreaks]
-%\frametitle{References}
-%\printbibliography
-%\end{frame}
+\section{References}
+\begin{frame}%[allowframebreaks]
+\frametitle{References}
+\printbibliography
+\end{frame}
 
 \end{document}
