--- a/presentation.tex
+++ b/presentation.tex
@@ -87,7 +87,7 @@ ICML 2021
 \titlepage
 \end{frame}
 
-\begin{frame}{Deep Imbalance Regression - Overview}
+\begin{frame}{Overview}
 	\begin{figure}[h]
 		\includegraphics[width=\linewidth]{images/teaser.pdf}
 		%\caption{}
