Add problem settings

--- a/presentation.tex
+++ b/presentation.tex
@@ -110,6 +110,8 @@ ICML 2021
 	\credit{Image}{yang2021delving}
 \end{frame}
 
+\input{sections/problem_settings}
+
 \begin{frame}{Label Distribution Smoothing}
 	\begin{figure}[h]
 		\includegraphics[width=\linewidth]{images/err_motivate_sep.pdf}
