--- a/presentation.tex
+++ b/presentation.tex
@@ -128,6 +128,8 @@ ICML 2021
 	\credit{Image}{yang2021delving}
 \end{frame}
 
+\input{sections/baselines}
+
 \section{References}
 \begin{frame}%[allowframebreaks]
 \frametitle{References}
