--- a/references.bib
+++ b/references.bib
@@ -6,3 +6,31 @@
 	year={2021},
 	organization={PMLR}
 }
+@inproceedings{torgo2013smote,
+	title={Smote for regression},
+	author={Torgo, Luís and Ribeiro, Rita P and Pfahringer, Bernhard and Branco, Paula},
+	booktitle={Portuguese conference on artificial intelligence},
+	pages={378--389},
+	year={2013},
+	organization={Springer}
+}
+@inproceedings{branco2017smogn,
+	title={SMOGN: a pre-processing approach for imbalanced regression},
+	author={Branco, Paula and Torgo, Luís and Ribeiro, Rita P},
+	booktitle={First international workshop on learning with imbalanced domains: Theory and applications},
+	pages={36--50},
+	year={2017},
+	organization={PMLR}
+}
+@article{lin2017focal,
+	title={Focal Loss for Dense Object Detection},
+	author={Lin, T},
+	journal={arXiv preprint arXiv:1708.02002},
+	year={2017}
+}
+@article{kang2019decoupling,
+	title={Decoupling representation and classifier for long-tailed recognition},
+	author={Kang, Bingyi and Xie, Saining and Rohrbach, Marcus and Yan, Zhicheng and Gordo, Albert and Feng, Jiashi and Kalantidis, Yannis},
+	journal={arXiv preprint arXiv:1910.09217},
+	year={2019}
+}
