Minor fix slide numbers

--- a/presentation.tex
+++ b/presentation.tex
@@ -83,7 +83,7 @@ ICML 2021
 
 \begin{document}
 	
-\begin{frame}
+\begin{frame}[noframenumbering,plain]
 \titlepage
 \end{frame}
 
@@ -131,7 +131,7 @@ ICML 2021
 \input{sections/baselines}
 
 \section{References}
-\begin{frame}%[allowframebreaks]
+\begin{frame}[noframenumbering,plain]%[allowframebreaks]
 \frametitle{References}
 \printbibliography
 \end{frame}
