--- a/presentation.tex
+++ b/presentation.tex
@@ -130,6 +130,8 @@ ICML 2021
 
 \input{sections/baselines}
 
+\input{sections/evaluation}
+
 \section{References}
 \begin{frame}[noframenumbering,plain]%[allowframebreaks]
 \frametitle{References}
