--- a/references.bib
+++ b/references.bib
@@ -34,3 +34,10 @@
 	journal={arXiv preprint arXiv:1910.09217},
 	year={2019}
 }
+@inproceedings{liu2019large,
+	title={Large-scale long-tailed recognition in an open world},
+	author={Liu, Ziwei and Miao, Zhongqi and Zhan, Xiaohang and Wang, Jiayun and Gong, Boqing and Yu, Stella X},
+	booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+	pages={2537--2546},
+	year={2019}
+}
