--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -13,9 +13,9 @@
 			\item Mean Absolute Error (MAE)
 			\item Mean Squared Error (MSE)
 			\item Pearson Correlation (PCC)
-			\item Geometric Mean Error (GME)
+			\item Geometric Mean Error (GM)
 			\begin{equation*}
-				GME = \sqrt[n]{\prod_{i=1}^n |y_i - \hat{y_i}|}
+				GM = \sqrt[n]{\prod_{i=1}^n |y_i - \hat{y_i}|}
 			\end{equation*}
 			\begin{itemize}
 				\item Pros: + fairness (uniformity) in prediction
