Add label distribution in training datasets

--- a/presentation.tex
+++ b/presentation.tex
@@ -99,7 +99,7 @@ ICML 2021
 	\credit{Image}{yang2021delving}
 \end{frame}
 
-%\input{sections/data}
+\input{sections/data}
 
 \begin{frame}{Test Error on Categorical vs. Continuous Label Space}
 	\begin{figure}[h]
