Plot change of feature statistics w.r.t. epoch

--- a/presentation.tex
+++ b/presentation.tex
@@ -42,6 +42,10 @@ hyperref={
 
 \usepackage{booktabs}
 
+\usepackage{tikz}
+
+\usepackage{caption}
+
 \colorlet{darkgreen}{green!65!black}
 
 \DeclareCiteCommand{\citeauthor}
