Add authors institutions

--- a/presentation.tex
+++ b/presentation.tex
@@ -88,8 +88,9 @@ hyperref={
 \title[Deep Imbalanced Regression]
 {\href{https://doi.org/10.48550/arXiv.2102.09554}{Deep Imbalanced Regression}}
 %\subtitle{}
-\author[Yang Y. et al.]{Yang Y, Zha K, Chen Y, Wang H, Katabi D}
-%\institute{Aalto University}
+\author[Yang Y. et al.]{Yuzhe Yang\textsuperscript{1} \; Kaiwen Zha\textsuperscript{1} \; Ying-Cong Chen\textsuperscript{1} \; Hao Wang\textsuperscript{2} \; \mbox{Dina Katabi\textsuperscript{1}}}
+\institute[MIT CSAIL, Rutgers]{\textsuperscript{1}MIT Computer Science \& Artificial Intelligence Laboratory 
+\\\textsuperscript{2}Department of Computer Science, Rutgers University}
 \date{}%3 July 2024}
 
 \addtobeamertemplate{title page}{}{
