--- a/sections/data.tex
+++ b/sections/data.tex
@@ -16,6 +16,7 @@
 			\end{tabular}}
 		\end{center}
 	\end{table}
+	\credit{Table}{yang2021delving}
 \end{frame}
 
 \begin{frame}{(Training) Datasets - Label Distributions}
