--- a/sections/feature_distribution_smoothing.tex
+++ b/sections/feature_distribution_smoothing.tex
@@ -1,92 +1,6 @@
 \sectionframe{Feature Distribution Smoothing (FDS)}
 
-\begin{frame}{Feature statistics similarity for anchor age 0}
-	\begin{figure}[h]
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_base_0.pdf}
-			\caption{Baseline}
-		\end{subfigure}\hspace{1em}%
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_ours_0.pdf}
-			\caption{FDS}
-		\end{subfigure}
-		%\caption{}
-	\end{figure}
-	\begin{itemize}
-		\item FDS improves feature statistics calibration:
-		\begin{itemize}
-			\item High similarity only in neighbourhood
-			\item Gradually decreasing similarity as the target becomes smaller or larger
-		\end{itemize}
-	\end{itemize}
-	\credit{Image}{yang2021delving}
-\end{frame}
-
-\begin{frame}{Feature statistics similarity for anchor age 30}
-	\begin{figure}[h]
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_base_30.pdf}
-			\caption{Baseline}
-		\end{subfigure}\hspace{1em}%
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_ours_30.pdf}
-			\caption{FDS}
-		\end{subfigure}
-		%\caption{}
-	\end{figure}
-	\begin{itemize}
-		\item FDS improves feature statistics calibration:
-		\begin{itemize}
-			\item High similarity only in neighbourhood
-			\item Gradually decreasing similarity as the target becomes smaller or larger
-		\end{itemize}
-	\end{itemize}
-	\credit{Image}{yang2021delving}
-\end{frame}
-
-\begin{frame}{Feature statistics similarity for anchor age 60}
-	\begin{figure}[h]
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_base_60.pdf}
-			\caption{Baseline}
-		\end{subfigure}\hspace{1em}%
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_ours_60.pdf}
-			\caption{FDS}
-		\end{subfigure}
-		%\caption{}
-	\end{figure}
-	\begin{itemize}
-		\item FDS improves feature statistics calibration:
-		\begin{itemize}
-			\item High similarity only in neighbourhood
-			\item Gradually decreasing similarity as the target becomes smaller or larger
-		\end{itemize}
-	\end{itemize}
-	\credit{Image}{yang2021delving}
-\end{frame}
-
-\begin{frame}{Feature statistics similarity for anchor age 90}
-	\begin{figure}[h]
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_base_90.pdf}
-			\caption{Baseline}
-		\end{subfigure}\hspace{1em}%
-		\begin{subfigure}{0.48\textwidth}
-			\includegraphics[width=\linewidth]{images/feat_sim_fds_ours_90.pdf}
-			\caption{FDS}
-		\end{subfigure}
-		%\caption{}
-	\end{figure}
-	\begin{itemize}
-		\item FDS improves feature statistics calibration:
-		\begin{itemize}
-			\item High similarity only in neighbourhood
-			\item Gradually decreasing similarity as the target becomes smaller or larger
-		\end{itemize}
-	\end{itemize}
-	\credit{Image}{yang2021delving}
-\end{frame}
+\input{sections/feature_statistics_similarity}
 
 \begin{frame}{Change of feature statistics w.r.t. epoch}
 	\begin{figure}[h]
@@ -118,6 +32,7 @@
 		\item ${\bm{\mu}, \bm{\Sigma}}$: Running mean and variance
 		\item ${\bm{\tilde{\mu}}, \bm{\tilde{\Sigma}}}$: Smoothed mean and variance
 	\end{itemize}
+	\credit{Image}{yang2021delving}
 \end{frame}
 
 \begin{frame}{The FDS Algorithm}
