--- a/sections/feature_distribution_smoothing.tex
+++ b/sections/feature_distribution_smoothing.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Feature Distribution Smoothing (FDS)}
+\begin{frame}{Feature Distribution Smoothing (FDS) - Preliminaries}
 	\begin{itemize}\setlength\itemsep{1.5em}
 		\item<2-> Starting points
 		\begin{enumerate}
@@ -54,7 +54,7 @@
 	\credit{Image}{yang2021delving}
 \end{frame}
 
-\begin{frame}{The FDS Algorithm}
+\begin{frame}{Feature Distribution Smoothing (FDS) - Overview}
 	\begin{figure}[h]
 		\includegraphics[width=\linewidth]{images/teaser_fds.pdf}
 		%\caption{}
