--- a/presentation.tex
+++ b/presentation.tex
@@ -14,11 +14,11 @@ hyperref={
 \usepackage{cleveref}
 
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{bm}
 \usepackage{bbm}
 \usepackage{mathrsfs}
 \usepackage{mathtools}
-\usepackage[cal=boondoxo]{mathalpha}
 
 % Change horizontal spacing
 \setlength{\tabcolsep}{3pt}
@@ -120,8 +120,6 @@ ICML 2021
 	\end{figure}
 	\credit{Image}{yang2021delving}
 \end{frame}
-
-
 
 \input{sections/problem_settings}
 
