--- a/references.bib
+++ b/references.bib
@@ -41,3 +41,13 @@
 	pages={2537--2546},
 	year={2019}
 }
+@article{parzen1962estimation,
+	title={On estimation of a probability density function and mode},
+	author={Parzen, Emanuel},
+	journal={The annals of mathematical statistics},
+	volume={33},
+	number={3},
+	pages={1065--1076},
+	year={1962},
+	publisher={JSTOR}
+}
