--- a/references.bib
+++ b/references.bib
@@ -41,6 +41,14 @@
 	pages={2537--2546},
 	year={2019}
 }
+@inproceedings{sun2016return,
+	title={Return of frustratingly easy domain adaptation},
+	author={Sun, Baochen and Feng, Jiashi and Saenko, Kate},
+	booktitle={Proceedings of the AAAI conference on artificial intelligence},
+	volume={30},
+	number={1},
+	year={2016}
+}
 @article{parzen1962estimation,
 	title={On estimation of a probability density function and mode},
 	author={Parzen, Emanuel},
